--- a/package.json
+++ b/package.json
@@ -6,12 +6,21 @@
     "antd": "^3.8.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "loom-js": "^1.17.0",
+    "loom-truffle-provider": "^0.5.0",
+    "truffle": "^4.1.14"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject",
+    "loom:download": "test -e loom || (wget https://private.delegatecall.com/loom/osx/build-330/loom && chmod +x loom)",
+    "loom:init": "./loom init",
+    "loom:run": "./loom run",
+    "migrate": "yarn truffle migrate --network=loom_dapp_chain",
+    "migrate:reset": "yarn truffle migrate --reset --network=loom_dapp_chain",
     "eject": "react-scripts eject"
   }
 }
